# akos-fabric

./: .dockerignore  .editorconfig  .gitignore  AkosFabric.slnx  Directory.Build.props  Directory.Packages.props  LICENSE  README.md
agent-runtime/: pyproject.toml
agent-runtime/agent_runtime/: __init__.py  __main__.py  ci_review.py  ci_validation.py  credentials.py  git_repository.py  github_review_glue.py  manifest.py  orchestrator.py  process_runner.py  result_writer.py  runtime_profile.py  serena_project.py  telemetry.py  verification.py
agent-runtime/agent_runtime/agents/: __init__.py  completion.py  openhands_runtime.py  roles.py  session_runner.py
agent-runtime/agent_runtime/contracts/: __init__.py  _base.py  _validation.py  candidate.py  judgment.py  plan.py  result.py  review.py
agent-runtime/agent_runtime/llm/: __init__.py  gemini.py  interface.py  resolver.py
agent-runtime/agent_runtime/tools/: __init__.py
agent-runtime/tests/: __init__.py  support.py  test_agents.py  test_ci_pipeline_glue.py  test_ci_review.py  test_git_repository.py  test_llm.py  test_manifest.py  test_orchestrator.py  test_process_runner.py  test_result.py  test_role_contracts.py
agent-runtime/tests/compatibility/: fake_serena_mcp.py  inspect_openhands.py  test_openhands_roles.py
repository-profiles/: akos-fabric.serena-project.yml  sites.example.json
schemas/: agent-session-manifest-v1.schema.json  agent-session-result-v1.schema.json  repository-profile-v1.schema.json
scripts/: agent-control-operator.ps1  get-dev-agent-token.ps1  (+2 more)
serena-runtime/: README.md  pyproject.toml
(+219 files in other folders)
