[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "akos-agent-runtime"
version = "0.1.0"
description = "Deterministic repository-session runtime for Akos Fabric"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic==2.13.4",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
]
openhands = [
    "openhands-sdk==1.36.1",
    "openhands-tools==1.36.1",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_runtime"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
